<resources>
    <string name="app_name">Sejahtera App</string>
    <string name="title_login_page">SEJAHTERA</string>
    <string name="subtitle_login_page">Untuk Indonesia yang Lebih Sejahtera</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="login">Masuk</string>
    <string name="logout">Keluar</string>
    <string name="change_password">Ganti Password</string>
    <string name="dummy_name">Cornelia Vanisa</string>
    <string name="dummy_email">cornelia.vanisa@bangkit.acedmy</string>
    <string name="dummy_instansi">Dinas Sosial</string>
    <string name="dummy_nip">19850723 200502 2 001</string>
    <string name="nama_kepala_keluarga">Nama Kepala Keluarga:</string>
    <string name="masukkan_nama_kepala_keluarga">Masukkan Nama Kepala Keluarga</string>
    <string name="nik">NIK:</string>
    <string name="masukkan_nik">Masukkan NIK</string>
    <string name="jenis_kepala_keluarga">Jenis Kelamin Kepala Keluarga:</string>
    <string name="masukkan_jenis_kelamin_kepala_keluarga">Masukkan Jenis Kelamin</string>
    <string name="pekerjaan_kepala_keluarga">Pekerjaan Kepala Keluarga:</string>
    <string name="status_pekerjaan">Status Pekerjaan:</string>
    <string name="status_pendidikan">Status Pendidikan:</string>
    <string name="status_kawin">Status Kawin:</string>
    <string name="kepemilikan_tempat_tinggal">Kepemilikan Tempat Tinggal:</string>
    <string name="memiliki_simpanan">Memiliki Simpanan:</string>
    <string name="jenis_atap">Jenis Atap:</string>
    <string name="kualitas_atap">Kualitas Atap:</string>
    <string name="jenis_tembok">Jenis Tembok:</string>
    <string name="kualitas_tembok">Kualitas Tembok:</string>
    <string name="jenis_lantai">Jenis Lantai:</string>
    <string name="kualitas_lantai">Kualitas Lantai:</string>
    <string name="sumber_penerangan">Sumber Penerangan:</string>
    <string name="daya_listrik_terpasang">Daya Listrik Terpasang:</string>
    <string name="bahan_bakar_memasak">Bahan Bakar Memasak:</string>
    <string name="sumber_air_minum">Sumber Air Minum:</string>
    <string name="fasilitas_bab">Fasilitas BAB:</string>
    <string name="resiko_stunting">Resiko Stunting:</string>
    <string name="submit">Submit</string>
    <string name="selamat_datang">Selamat Datang,</string>
    <string name="cornelia_vanisa">Cornelia Vanisa</string>
    <string name="mari_bantu_mereka">Mari bantu mereka</string>
    <string name="mendapatkan_kesejahteraan">mendapatkan kesejahteraan</string>
    <string name="mulai_survey">Mulai Survey > </string>
    <string name="hasil_rekomendasi_bantuan">Hasil Rekomendasi Bantuan</string>
    <string name="kategori">Kategori</string>
    <string name="hasil">Hasil</string>
    <string name="line_break">line break</string>
    <string name="penerima_bnpt">Penerima BNPT</string>
    <string name="ya">Ya</string>
    <string name="penerima_bpum">Penerima BPUM</string>
    <string name="tidak">Tidak</string>
    <string name="penerima_bst">Penerima BST</string>
    <string name="penerima_pkh">Penerima PKH</string>
    <string name="penerima_sembako">Penerima SEMBAKO</string>
    <string name="penerima_prakerja">Penerima Prakerja</string>
    <string name="penerima_kur">Penerima KUR</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="profil">Profil</string>

</resources>