<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.home.HomeActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/plusjakartasans_bold"
        android:text="@string/selamat_datang"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_marginTop="110dp"
        android:layout_marginStart="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/titleTextView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/titleTextView2"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/plusjakartasans_regular"
        android:text="@string/cornelia_vanisa"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/titleTextView"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        card_view:cardBackgroundColor="@color/background_card"
        card_view:cardCornerRadius="23dp"
        android:layout_width="350dp"
        android:layout_height="120dp"
        app:cardElevation="0dp"
        android:clickable="true"
        android:layout_marginTop="130dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView2">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/titleCardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/plusjakartasans_bold"
                android:text="@string/mari_bantu_mereka"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.095"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/titleCardView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/plusjakartasans_bold"
                android:text="@string/mendapatkan_kesejahteraan"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:elevation="10dp"
                android:layout_marginTop="-8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.176"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleCardView" />

            <TextView
                android:id="@+id/titleCardView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/plusjakartasans_regular"
                android:text="@string/mulai_survey"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.07"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleCardView2" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="-50dp"
                android:elevation="-10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                card_view:srcCompat="@drawable/image_logo_low" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/menu_bar"
        app:itemTextColor="@drawable/bottom_nav_selector"
        app:itemIconTint="@drawable/bottom_nav_selector"
        android:background="@drawable/bottom_nav_shape"
        />


</androidx.constraintlayout.widget.ConstraintLayout>